--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     padding-right: 200px;
 }
 
-img {
+#hero-img{
     width: auto;
     height: 300px;
 }
@@ -32,6 +32,7 @@ img {
 
 h5{
     font-size: 18px;
+    color: #e5e7eb;
 }
 
 
@@ -43,9 +44,6 @@ h5{
     justify-content: center;
 
 }
-
-
-
 
 ul {
     list-style: none;
@@ -61,7 +59,7 @@ a {
     font-size: 18px;
 }
 
-button {
+.sign-up1 {
     padding: 8px 48px;
     border-radius: 8px;
     background:  #3882f6;
@@ -69,3 +67,114 @@ button {
   color: white;
   font-size: 18px;
   }
+
+  /* Section 2 CSS */
+  .info img{
+      width: 100px;
+      height: 100px;
+      border: #3882f6 2px solid;
+      border-radius: 25px;
+      gao
+  }
+
+  .section2{
+      text-align: center;
+      padding: 16px;
+  }
+
+  .info-header{ 
+      font-size: 36px;
+      font-weight: bold;
+      color: #1f2937;
+      margin-bottom: 40px;
+      margin-top: 40px;
+  }
+
+  .random-info-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 52px;
+      padding-bottom: 40px;
+  }
+
+  .info{
+      max-width: 200px;
+  }
+
+  /* Section 3 CSS */
+  .section3{
+      background-color: #E5E7EB;
+      padding: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+  }
+
+  .quote{
+      font-style: italic;
+      font-weight: lighter;
+      font-size: 36px;
+      color:#1f2937;
+      max-width: 950px;
+  }
+
+  .author{
+      font-size: 26px;
+      margin-left: 500px;
+      font-weight: bold;
+  }
+
+  /* Section 4 CSS */
+  .section4{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 150px;
+  }
+
+  .cta-container{
+      background-color: #3882F6;
+      border-radius: 10px;
+      display: flex;
+      padding: 55px 230px;
+      gap: 25px;
+      align-items: center;
+      flex-shrink: 0;
+  }
+
+  .cta-header{
+      font-size: 24px ;
+      color:#f9faf8 ;
+      font-weight: bold;
+  }
+
+  .cta-subtext{
+      font-size: 18px;
+    color: #e5e5e5; ;
+  }
+
+  .sign-up2{
+    padding: 8px 60px;
+    border-radius: 8px;
+    background:  #3882f6;
+    border: 1px solid white;
+  color: white;
+  font-size: 18px;
+  white-space: nowrap
+  }
+
+  /* Footer CSS */
+
+  .footer{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #1f2937;
+      padding: 20px;
+    }
+
+    .footer-text{
+        color: #E5E7EB;
+    }
